--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -24,6 +24,7 @@ blockquote,
 dl,
 dd {
 	margin-block-end: 0;
+	margin-block-start: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
