--- a/src/styles/radix.css
+++ b/src/styles/radix.css
@@ -1,6 +1,13 @@
 @import '@radix-ui/colors/black-alpha.css';
 @import '@radix-ui/colors/white-alpha.css';
 
+/* NEUTRAL IMPORTS */
+
+@import '@radix-ui/colors/gray.css';
+@import '@radix-ui/colors/gray-alpha.css';
+@import '@radix-ui/colors/gray-dark.css';
+@import '@radix-ui/colors/gray-dark-alpha.css';
+
 @import '@radix-ui/colors/mauve.css';
 @import '@radix-ui/colors/mauve-alpha.css';
 @import '@radix-ui/colors/mauve-dark.css';
@@ -11,20 +18,22 @@
 @import '@radix-ui/colors/slate-dark.css';
 @import '@radix-ui/colors/slate-dark-alpha.css';
 
-@import '@radix-ui/colors/sand.css';
-@import '@radix-ui/colors/sand-alpha.css';
-@import '@radix-ui/colors/sand-dark.css';
-@import '@radix-ui/colors/sand-dark-alpha.css';
+@import '@radix-ui/colors/sage.css';
+@import '@radix-ui/colors/sage-alpha.css';
+@import '@radix-ui/colors/sage-dark.css';
+@import '@radix-ui/colors/sage-dark-alpha.css';
 
 @import '@radix-ui/colors/olive.css';
 @import '@radix-ui/colors/olive-alpha.css';
 @import '@radix-ui/colors/olive-dark.css';
 @import '@radix-ui/colors/olive-dark-alpha.css';
 
-@import '@radix-ui/colors/sage.css';
-@import '@radix-ui/colors/sage-alpha.css';
-@import '@radix-ui/colors/sage-dark.css';
-@import '@radix-ui/colors/sage-dark-alpha.css';
+@import '@radix-ui/colors/sand.css';
+@import '@radix-ui/colors/sand-alpha.css';
+@import '@radix-ui/colors/sand-dark.css';
+@import '@radix-ui/colors/sand-dark-alpha.css';
+
+/* COLOR IMPORTS */
 
 @import '@radix-ui/colors/tomato.css';
 @import '@radix-ui/colors/tomato-alpha.css';
@@ -56,29 +65,111 @@
 @import '@radix-ui/colors/jade-dark.css';
 @import '@radix-ui/colors/jade-dark-alpha.css';
 
+@import '@radix-ui/colors/green.css';
+@import '@radix-ui/colors/green-alpha.css';
+@import '@radix-ui/colors/green-dark.css';
+@import '@radix-ui/colors/green-dark-alpha.css';
+
 @import '@radix-ui/colors/grass.css';
 @import '@radix-ui/colors/grass-alpha.css';
 @import '@radix-ui/colors/grass-dark.css';
 @import '@radix-ui/colors/grass-dark-alpha.css';
+
+@import '@radix-ui/colors/lime.css';
+@import '@radix-ui/colors/lime-alpha.css';
+@import '@radix-ui/colors/lime-dark.css';
+@import '@radix-ui/colors/lime-dark-alpha.css';
 
 @import '@radix-ui/colors/amber.css';
 @import '@radix-ui/colors/amber-alpha.css';
 @import '@radix-ui/colors/amber-dark.css';
 @import '@radix-ui/colors/amber-dark-alpha.css';
 
-.light {
-	--clr-max: black;
-}
-.dark {
-	--clr-max: white;
-}
+@import '@radix-ui/colors/orange.css';
+@import '@radix-ui/colors/orange-alpha.css';
+@import '@radix-ui/colors/orange-dark.css';
+@import '@radix-ui/colors/orange-dark-alpha.css';
 
-/* NEUTRALS */
+/* CLASS LIST */
+/* 
+.gray, .mauve, .slate, .sage, .olive, .sand, .bronze, .gold, .brown, .orange, .tomato, .red, .ruby, .crimson, .pink, .plum, .purple, .violet, .iris, .indigo, .blue, .cyan, .teal, .jade, .green, .grass, .sly, .mint, .lime, .yellow, .amber
+*/
 
+/* ============================== */
+/* CONTRAST */
+/* ============================== */
+
+.gray,
 .mauve,
+.slate,
+.sage,
+.olive,
+.sand,
+.bronze,
+.gold,
+.brown,
+.orange,
 .tomato,
+.red,
+.ruby,
+.crimson,
+.pink,
+.plum,
 .purple,
-:where(.mauve, .tomato, .purple) :where(.light, .dark) {
+.violet,
+.iris,
+.indigo,
+.blue,
+.cyan,
+.teal,
+.jade,
+.green,
+.grass {
+	--clr-contrast: white;
+}
+
+.sly,
+.mint,
+.lime,
+.yellow,
+.amber {
+	--clr-contrast: black;
+}
+
+/* ============================== */
+/* NEUTRALS */
+/* ============================== */
+
+.gray,
+:where(.gray) :where(.dark, .light) {
+	--clr-1: var(--gray-1);
+	--clr-2: var(--gray-2);
+	--clr-3: var(--gray-3);
+	--clr-4: var(--gray-4);
+	--clr-5: var(--gray-5);
+	--clr-6: var(--gray-6);
+	--clr-7: var(--gray-7);
+	--clr-8: var(--gray-8);
+	--clr-9: var(--gray-9);
+	--clr-10: var(--gray-10);
+	--clr-11: var(--gray-11);
+	--clr-12: var(--gray-12);
+
+	--clr-a1: var(--gray-a1);
+	--clr-a2: var(--gray-a2);
+	--clr-a3: var(--gray-a3);
+	--clr-a4: var(--gray-a4);
+	--clr-a5: var(--gray-a5);
+	--clr-a6: var(--gray-a6);
+	--clr-a7: var(--gray-a7);
+	--clr-a8: var(--gray-a8);
+	--clr-a9: var(--gray-a9);
+	--clr-a10: var(--gray-a10);
+	--clr-a11: var(--gray-a11);
+	--clr-a12: var(--gray-a12);
+}
+.mauve,
+:where(.mauve) :where(.dark, .light) {
 	--clr-1: var(--mauve-1);
 	--clr-2: var(--mauve-2);
 	--clr-3: var(--mauve-3);
@@ -105,19 +196,8 @@
 	--clr-a11: var(--mauve-a11);
 	--clr-a12: var(--mauve-a12);
 }
-.mauve,
-:where(.mauve) :where(.light, .dark) {
-	--fill: var(--mauve-9);
-	--fill-active: var(--mauve-10);
-	--on-fill: white;
-	--link: var(--mauve-11);
-	--link-active: var(--mauve-12);
-}
-
 .slate,
-.indigo,
-.sky,
-:where(.slate, .indigo, .sky) :where(.light, .dark) {
+:where(.slate) :where(.dark, .light) {
 	--clr-1: var(--slate-1);
 	--clr-2: var(--slate-2);
 	--clr-3: var(--slate-3);
@@ -144,18 +224,8 @@
 	--clr-a11: var(--slate-a11);
 	--clr-a12: var(--slate-a12);
 }
-.slate,
-:where(.slate) :where(.light, .dark) {
-	--fill: var(--slate-9);
-	--fill-active: var(--slate-10);
-	--on-fill: white;
-	--link: var(--slate-11);
-	--link-active: var(--slate-12);
-}
-
 .sage,
-.jade,
-:where(.sage, .jade) :where(.light, .dark) {
+:where(.sage) :where(.dark, .light) {
 	--clr-1: var(--sage-1);
 	--clr-2: var(--sage-2);
 	--clr-3: var(--sage-3);
@@ -182,18 +252,8 @@
 	--clr-a11: var(--sage-a11);
 	--clr-a12: var(--sage-a12);
 }
-.sage,
-:where(.sage) :where(.light, .dark) {
-	--fill: var(--sage-9);
-	--fill-active: var(--sage-10);
-	--on-fill: white;
-	--link: var(--sage-11);
-	--link-active: var(--sage-12);
-}
-
 .olive,
-.grass,
-:where(.olive, .grass) :where(.light, .dark) {
+:where(.olive) :where(.dark, .light) {
 	--clr-1: var(--olive-1);
 	--clr-2: var(--olive-2);
 	--clr-3: var(--olive-3);
@@ -220,18 +280,8 @@
 	--clr-a11: var(--olive-a11);
 	--clr-a12: var(--olive-a12);
 }
-.olive,
-:where(.olive) :where(.light, .dark) {
-	--fill: var(--olive-9);
-	--fill-active: var(--olive-10);
-	--on-fill: white;
-	--link: var(--olive-11);
-	--link-active: var(--olive-12);
-}
-
 .sand,
-.amber,
-:where(.amber, .sand) :where(.light, .dark) {
+:where(.sand) :where(.dark, .light) {
 	--clr-1: var(--sand-1);
 	--clr-2: var(--sand-2);
 	--clr-3: var(--sand-3);
@@ -258,19 +308,46 @@
 	--clr-a11: var(--sand-a11);
 	--clr-a12: var(--sand-a12);
 }
+.gray,
+.mauve,
+.slate,
+.sage,
+.olive,
 .sand,
-:where(.sand) :where(.light, .dark) {
-	--fill: var(--sand-9);
-	--fill-active: var(--sand-10);
-	--on-fill: white;
-	--link: var(--sand-11);
-	--link-active: var(--sand-12);
+:where(.gray, .mauve, .slate, .sage, .olive, .sand) :where(.dark, .light) {
+	--neu-1: var(--clr-1);
+	--neu-2: var(--clr-2);
+	--neu-3: var(--clr-3);
+	--neu-4: var(--clr-4);
+	--neu-5: var(--clr-5);
+	--neu-6: var(--clr-6);
+	--neu-7: var(--clr-7);
+	--neu-8: var(--clr-8);
+	--neu-9: var(--clr-9);
+	--neu-10: var(--clr-10);
+	--neu-11: var(--clr-11);
+	--neu-12: var(--clr-12);
+
+	--neu-a1: var(--clr-a1);
+	--neu-a2: var(--clr-a2);
+	--neu-a3: var(--clr-a3);
+	--neu-a4: var(--clr-a4);
+	--neu-a5: var(--clr-a5);
+	--neu-a6: var(--clr-a6);
+	--neu-a7: var(--clr-a7);
+	--neu-a8: var(--clr-a8);
+	--neu-a9: var(--clr-a9);
+	--neu-a10: var(--clr-a10);
+	--neu-a11: var(--clr-a11);
+	--neu-a12: var(--clr-a12);
 }
 
+/* ============================== */
 /* COLORS */
+/* ============================== */
 
-.tomato.chromatic,
-:where(.tomato .chromatic, .tomato .light, .tomato .dark) {
+.tomato,
+:where(.tomato) :where(.dark, .light) {
 	--clr-1: var(--tomato-1);
 	--clr-2: var(--tomato-2);
 	--clr-3: var(--tomato-3);
@@ -297,17 +374,36 @@
 	--clr-a11: var(--tomato-a11);
 	--clr-a12: var(--tomato-a12);
 }
-.tomato,
-:where(.tomato) :where(.light, .dark) {
-	--fill: var(--tomato-9);
-	--fill-active: var(--tomato-10);
-	--on-fill: white;
-	--link: var(--tomato-11);
-	--link-active: var(--tomato-12);
-}
+.red,
+:where(.red) :where(.dark, .light) {
+	--clr-1: var(--red-1);
+	--clr-2: var(--red-2);
+	--clr-3: var(--red-3);
+	--clr-4: var(--red-4);
+	--clr-5: var(--red-5);
+	--clr-6: var(--red-6);
+	--clr-7: var(--red-7);
+	--clr-8: var(--red-8);
+	--clr-9: var(--red-9);
+	--clr-10: var(--red-10);
+	--clr-11: var(--red-11);
+	--clr-12: var(--red-12);
 
-.purple.chromatic,
-:where(.purple .chromatic, .purple .light, .purple .dark) {
+	--clr-a1: var(--red-a1);
+	--clr-a2: var(--red-a2);
+	--clr-a3: var(--red-a3);
+	--clr-a4: var(--red-a4);
+	--clr-a5: var(--red-a5);
+	--clr-a6: var(--red-a6);
+	--clr-a7: var(--red-a7);
+	--clr-a8: var(--red-a8);
+	--clr-a9: var(--red-a9);
+	--clr-a10: var(--red-a10);
+	--clr-a11: var(--red-a11);
+	--clr-a12: var(--red-a12);
+}
+.purple,
+:where(.purple) :where(.dark, .light) {
 	--clr-1: var(--purple-1);
 	--clr-2: var(--purple-2);
 	--clr-3: var(--purple-3);
@@ -334,17 +430,44 @@
 	--clr-a11: var(--purple-a11);
 	--clr-a12: var(--purple-a12);
 }
+.tomato,
+.red,
+.ruby,
+.crimson,
+.pink,
+.plum,
 .purple,
-:where(.purple) :where(.light, .dark) {
-	--fill: var(--purple-9);
-	--fill-active: var(--purple-10);
-	--on-fill: white;
-	--link: var(--purple-11);
-	--link-active: var(--purple-12);
+.violet,
+:where(.tomato, .red, .ruby, .crimson, .pink, .plum, .purple, .violet) :where(.dark, .light) {
+	--neu-1: var(--mauve-1);
+	--neu-2: var(--mauve-2);
+	--neu-3: var(--mauve-3);
+	--neu-4: var(--mauve-4);
+	--neu-5: var(--mauve-5);
+	--neu-6: var(--mauve-6);
+	--neu-7: var(--mauve-7);
+	--neu-8: var(--mauve-8);
+	--neu-9: var(--mauve-9);
+	--neu-10: var(--mauve-10);
+	--neu-11: var(--mauve-11);
+	--neu-12: var(--mauve-12);
+
+	--neu-a1: var(--mauve-a1);
+	--neu-a2: var(--mauve-a2);
+	--neu-a3: var(--mauve-a3);
+	--neu-a4: var(--mauve-a4);
+	--neu-a5: var(--mauve-a5);
+	--neu-a6: var(--mauve-a6);
+	--neu-a7: var(--mauve-a7);
+	--neu-a8: var(--mauve-a8);
+	--neu-a9: var(--mauve-a9);
+	--neu-a10: var(--mauve-a10);
+	--neu-a11: var(--mauve-a11);
+	--neu-a12: var(--mauve-a12);
 }
 
-.indigo.chromatic,
-:where(.indigo .chromatic, .indigo .light, .indigo .dark) {
+.indigo,
+:where(.indigo) :where(.dark, .light) {
 	--clr-1: var(--indigo-1);
 	--clr-2: var(--indigo-2);
 	--clr-3: var(--indigo-3);
@@ -371,17 +494,8 @@
 	--clr-a11: var(--indigo-a11);
 	--clr-a12: var(--indigo-a12);
 }
-.indigo,
-:where(.indigo) :where(.light, .dark) {
-	--fill: var(--indigo-9);
-	--fill-active: var(--indigo-10);
-	--on-fill: white;
-	--link: var(--indigo-11);
-	--link-active: var(--indigo-12);
-}
-
-.sky.chromatic,
-:where(.sky .chromatic, .sky .light, .sky .dark) {
+.sky,
+:where(.sky) :where(.dark, .light) {
 	--clr-1: var(--sky-1);
 	--clr-2: var(--sky-2);
 	--clr-3: var(--sky-3);
@@ -408,17 +522,41 @@
 	--clr-a11: var(--sky-a11);
 	--clr-a12: var(--sky-a12);
 }
+.iris,
+.indigo,
+.blue,
 .sky,
-:where(.sky) :where(.light, .dark) {
-	--fill: var(--sky-9);
-	--fill-active: var(--sky-10);
-	--on-fill: white;
-	--link: var(--sky-11);
-	--link-active: var(--sky-12);
+.cyan,
+:where(.iris, .indigo, .blue, .sky, .cyan) :where(.dark, .light) {
+	--neu-1: var(--slate-1);
+	--neu-2: var(--slate-2);
+	--neu-3: var(--slate-3);
+	--neu-4: var(--slate-4);
+	--neu-5: var(--slate-5);
+	--neu-6: var(--slate-6);
+	--neu-7: var(--slate-7);
+	--neu-8: var(--slate-8);
+	--neu-9: var(--slate-9);
+	--neu-10: var(--slate-10);
+	--neu-11: var(--slate-11);
+	--neu-12: var(--slate-12);
+
+	--neu-a1: var(--slate-a1);
+	--neu-a2: var(--slate-a2);
+	--neu-a3: var(--slate-a3);
+	--neu-a4: var(--slate-a4);
+	--neu-a5: var(--slate-a5);
+	--neu-a6: var(--slate-a6);
+	--neu-a7: var(--slate-a7);
+	--neu-a8: var(--slate-a8);
+	--neu-a9: var(--slate-a9);
+	--neu-a10: var(--slate-a10);
+	--neu-a11: var(--slate-a11);
+	--neu-a12: var(--slate-a12);
 }
 
-.jade.chromatic,
-:where(.jade .chromatic, .jade .light, .jade .dark) {
+.jade,
+:where(.jade) :where(.dark, .light) {
 	--clr-1: var(--jade-1);
 	--clr-2: var(--jade-2);
 	--clr-3: var(--jade-3);
@@ -445,17 +583,68 @@
 	--clr-a11: var(--jade-a11);
 	--clr-a12: var(--jade-a12);
 }
+.green,
+:where(.green) :where(.dark, .light) {
+	--clr-1: var(--green-1);
+	--clr-2: var(--green-2);
+	--clr-3: var(--green-3);
+	--clr-4: var(--green-4);
+	--clr-5: var(--green-5);
+	--clr-6: var(--green-6);
+	--clr-7: var(--green-7);
+	--clr-8: var(--green-8);
+	--clr-9: var(--green-9);
+	--clr-10: var(--green-10);
+	--clr-11: var(--green-11);
+	--clr-12: var(--green-12);
+
+	--clr-a1: var(--green-a1);
+	--clr-a2: var(--green-a2);
+	--clr-a3: var(--green-a3);
+	--clr-a4: var(--green-a4);
+	--clr-a5: var(--green-a5);
+	--clr-a6: var(--green-a6);
+	--clr-a7: var(--green-a7);
+	--clr-a8: var(--green-a8);
+	--clr-a9: var(--green-a9);
+	--clr-a10: var(--green-a10);
+	--clr-a11: var(--green-a11);
+	--clr-a12: var(--green-a12);
+}
+.mint,
+.teal,
 .jade,
-:where(.jade) :where(.light, .dark) {
-	--fill: var(--jade-9);
-	--fill-active: var(--jade-10);
-	--on-fill: white;
-	--link: var(--jade-11);
-	--link-active: var(--jade-12);
+.green,
+:where(.mint, .teal, .jade, .green) :where(.dark, .light) {
+	--neu-1: var(--sage-1);
+	--neu-2: var(--sage-2);
+	--neu-3: var(--sage-3);
+	--neu-4: var(--sage-4);
+	--neu-5: var(--sage-5);
+	--neu-6: var(--sage-6);
+	--neu-7: var(--sage-7);
+	--neu-8: var(--sage-8);
+	--neu-9: var(--sage-9);
+	--neu-10: var(--sage-10);
+	--neu-11: var(--sage-11);
+	--neu-12: var(--sage-12);
+
+	--neu-a1: var(--sage-a1);
+	--neu-a2: var(--sage-a2);
+	--neu-a3: var(--sage-a3);
+	--neu-a4: var(--sage-a4);
+	--neu-a5: var(--sage-a5);
+	--neu-a6: var(--sage-a6);
+	--neu-a7: var(--sage-a7);
+	--neu-a8: var(--sage-a8);
+	--neu-a9: var(--sage-a9);
+	--neu-a10: var(--sage-a10);
+	--neu-a11: var(--sage-a11);
+	--neu-a12: var(--sage-a12);
 }
 
-.grass.chromatic,
-:where(.grass .chromatic, .grass .light, .grass .dark) {
+.grass,
+:where(.grass) :where(.dark, .light) {
 	--clr-1: var(--grass-1);
 	--clr-2: var(--grass-2);
 	--clr-3: var(--grass-3);
@@ -482,17 +671,66 @@
 	--clr-a11: var(--grass-a11);
 	--clr-a12: var(--grass-a12);
 }
+.lime,
+:where(.lime) :where(.dark, .light) {
+	--clr-1: var(--lime-1);
+	--clr-2: var(--lime-2);
+	--clr-3: var(--lime-3);
+	--clr-4: var(--lime-4);
+	--clr-5: var(--lime-5);
+	--clr-6: var(--lime-6);
+	--clr-7: var(--lime-7);
+	--clr-8: var(--lime-8);
+	--clr-9: var(--lime-9);
+	--clr-10: var(--lime-10);
+	--clr-11: var(--lime-11);
+	--clr-12: var(--lime-12);
+
+	--clr-a1: var(--lime-a1);
+	--clr-a2: var(--lime-a2);
+	--clr-a3: var(--lime-a3);
+	--clr-a4: var(--lime-a4);
+	--clr-a5: var(--lime-a5);
+	--clr-a6: var(--lime-a6);
+	--clr-a7: var(--lime-a7);
+	--clr-a8: var(--lime-a8);
+	--clr-a9: var(--lime-a9);
+	--clr-a10: var(--lime-a10);
+	--clr-a11: var(--lime-a11);
+	--clr-a12: var(--lime-a12);
+}
 .grass,
-:where(.grass) :where(.light, .dark) {
-	--fill: var(--grass-9);
-	--fill-active: var(--grass-10);
-	--on-fill: white;
-	--link: var(--grass-11);
-	--link-active: var(--grass-12);
+.lime,
+:where(.grass, .lime) :where(.dark, .light) {
+	--neu-1: var(--olive-1);
+	--neu-2: var(--olive-2);
+	--neu-3: var(--olive-3);
+	--neu-4: var(--olive-4);
+	--neu-5: var(--olive-5);
+	--neu-6: var(--olive-6);
+	--neu-7: var(--olive-7);
+	--neu-8: var(--olive-8);
+	--neu-9: var(--olive-9);
+	--neu-10: var(--olive-10);
+	--neu-11: var(--olive-11);
+	--neu-12: var(--olive-12);
+
+	--neu-a1: var(--olive-a1);
+	--neu-a2: var(--olive-a2);
+	--neu-a3: var(--olive-a3);
+	--neu-a4: var(--olive-a4);
+	--neu-a5: var(--olive-a5);
+	--neu-a6: var(--olive-a6);
+	--neu-a7: var(--olive-a7);
+	--neu-a8: var(--olive-a8);
+	--neu-a9: var(--olive-a9);
+	--neu-a10: var(--olive-a10);
+	--neu-a11: var(--olive-a11);
+	--neu-a12: var(--olive-a12);
 }
 
-.amber.chromatic,
-:where(.amber .chromatic) {
+.amber,
+:where(.amber) :where(.dark, .light) {
 	--clr-1: var(--amber-1);
 	--clr-2: var(--amber-2);
 	--clr-3: var(--amber-3);
@@ -519,11 +757,62 @@
 	--clr-a11: var(--amber-a11);
 	--clr-a12: var(--amber-a12);
 }
+.orange,
+:where(.orange) :where(.dark, .light) {
+	--clr-1: var(--orange-1);
+	--clr-2: var(--orange-2);
+	--clr-3: var(--orange-3);
+	--clr-4: var(--orange-4);
+	--clr-5: var(--orange-5);
+	--clr-6: var(--orange-6);
+	--clr-7: var(--orange-7);
+	--clr-8: var(--orange-8);
+	--clr-9: var(--orange-9);
+	--clr-10: var(--orange-10);
+	--clr-11: var(--orange-11);
+	--clr-12: var(--orange-12);
+
+	--clr-a1: var(--orange-a1);
+	--clr-a2: var(--orange-a2);
+	--clr-a3: var(--orange-a3);
+	--clr-a4: var(--orange-a4);
+	--clr-a5: var(--orange-a5);
+	--clr-a6: var(--orange-a6);
+	--clr-a7: var(--orange-a7);
+	--clr-a8: var(--orange-a8);
+	--clr-a9: var(--orange-a9);
+	--clr-a10: var(--orange-a10);
+	--clr-a11: var(--orange-a11);
+	--clr-a12: var(--orange-a12);
+}
+.yellow,
 .amber,
-:where(.amber) :where(.light, .dark) {
-	--fill: var(--amber-9);
-	--fill-active: var(--amber-10);
-	--on-fill: black;
-	--link: var(--amber-11);
-	--link-active: var(--amber-12);
+.orange,
+.brown,
+:where(.yellow, .amber, .orange, .brown) :where(.dark, .light) {
+	--neu-1: var(--sand-1);
+	--neu-2: var(--sand-2);
+	--neu-3: var(--sand-3);
+	--neu-4: var(--sand-4);
+	--neu-5: var(--sand-5);
+	--neu-6: var(--sand-6);
+	--neu-7: var(--sand-7);
+	--neu-8: var(--sand-8);
+	--neu-9: var(--sand-9);
+	--neu-10: var(--sand-10);
+	--neu-11: var(--sand-11);
+	--neu-12: var(--sand-12);
+
+	--neu-a1: var(--sand-a1);
+	--neu-a2: var(--sand-a2);
+	--neu-a3: var(--sand-a3);
+	--neu-a4: var(--sand-a4);
+	--neu-a5: var(--sand-a5);
+	--neu-a6: var(--sand-a6);
+	--neu-a7: var(--sand-a7);
+	--neu-a8: var(--sand-a8);
+	--neu-a9: var(--sand-a9);
+	--neu-a10: var(--sand-a10);
+	--neu-a11: var(--sand-a11);
+	--neu-a12: var(--sand-a12);
 }
