--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,15 +1,19 @@
 @layer variables, normalize, reset, theme, defaults, utilities;
 
 @import 'chroma.css' layer(variables);
+@import 'triptych.css' layer(theme);
 @import 'normalize.css' layer(normalize);
 @import 'reset.css' layer(reset);
-@import 'triptych.css' layer(theme);
 
 html {
+	--font-stack-sans: 'IBM Plex Sans', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+	--font-stack-mono: 'IBM Plex Mono', monospace;
+
 	height: 100vh;
 	min-height: 100vh;
-	font-family: 'IBM Plex Sans', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+	font-family: var(--font-stack-sans);
 	font-size: 16px;
+	background-color: var(--background);
 }
 
 body {
@@ -19,8 +23,26 @@ body {
 	font-size: 0.875rem;
 }
 
+button {
+	font-family: var(--font-stack-mono);
+	background-color: var(--splash);
+	color: var(--accent);
+	border-width: 1px;
+	border-style: solid;
+	border-color: var(--border);
+	border-radius: 2px;
+	padding: 4px 8px;
+	margin: 0;
+	font-size: 0.925em;
+
+	&:hover {
+		background-color: var(--flood);
+		border-color: var(--boundary);
+	}
+}
+
 :any-link {
-	font-family: 'IBM Plex Mono', monospace;
+	font-family: var(--font-stack-mono);
 	color: var(--link);
 
 	&:hover {
