--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,12 +1,8 @@
-@layer theme, normalize, reset, defaults, utilities;
+@layer theme, normalize, reset, defaults, components, utilities;
 
 @import './triptych.css' layer(theme);
 @import 'normalize.css' layer(normalize);
 @import './reset.css' layer(reset);
 @import './defaults.css' layer(defaults);
+@import './components.css' layer(components);
 @import './utilities.css' layer(utilities);
-
-.app {
-	--padding: 2rem;
-	position: relative;
-}
