--- a/src/styles/defaults.css
+++ b/src/styles/defaults.css
@@ -1,6 +1,7 @@
 :root {
 	--font-size-small: 0.85em;
 	--font-size-body: 1em;
+	--font-size-subhead: calc(3.5em / 3);
 	--font-size-heading: calc(4em / 3);
 	--font-size-title: calc(6em / 3);
 
@@ -38,12 +39,22 @@ body {
 h1 {
 	font-size: var(--font-size-title);
 	font-weight: 300;
-	line-height: 1.4;
+	line-height: 1.3;
 }
 h2 {
 	font-size: var(--font-size-heading);
 	font-weight: 300;
+	line-height: 1.4;
+}
+h3 {
+	font-size: var(--font-size-subhead);
+	font-weight: 300;
 	line-height: 1.5;
+}
+h1,
+h2,
+h3 {
+	color: var(--primary);
 }
 
 strong {
