--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,6 +1,6 @@
 .card {
-	--container-padding-side: 1.5rem;
-	--container-padding-top: 1.25rem;
+	--container-padding-side: 1.5em;
+	--container-padding-top: 1.25em;
 	padding: var(--container-padding-top) var(--container-padding-side);
 	background-color: var(--paper);
 	border: 1px solid var(--divider);
