Updates to page navigation, anchor links, and scrolling

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,8 +1,9 @@
-@layer theme, normalize, reset, defaults, components, utilities;
+@layer theme, normalize, reset, defaults, layout, components, utilities;
 
 @import './triptych.css' layer(theme);
 @import 'normalize.css' layer(normalize);
 @import './reset.css' layer(reset);
 @import './defaults.css' layer(defaults);
+@import './layout.scss' layer(layout);
 @import './components.css' layer(components);
 @import './utilities.css' layer(utilities);
