--- a/src/styles/defaults.css
+++ b/src/styles/defaults.css
@@ -25,7 +25,7 @@ html {
 	font-feature-settings: 'liga';
 	hanging-punctuation: first last;
 	background-color: var(--background);
-	accent-color: var(--accent);
+	accent-color: var(--link);
 }
 
 body {
