--- a/src/styles/defaults.css
+++ b/src/styles/defaults.css
@@ -150,10 +150,16 @@ pre {
 	outline-offset: 2px;
 }
 
+ol,
+ul {
+	margin: 0;
+	padding-inline-start: 1.5em;
+}
+
 blockquote {
 	margin: 0;
-	padding-left: 1rem;
-	border-left: 4px solid var(--divider);
+	padding-left: 0.75em;
+	border-left: 0.35em solid var(--flood);
 	font-style: italic;
 	font-size: 1.1em;
 	font-family: var(--font-stack-serif);
