--- a/src/styles/defaults.css
+++ b/src/styles/defaults.css
@@ -13,16 +13,18 @@
 
 html {
 	--font-stack-sans: 'IBM Plex Sans', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-	--font-stack-serif: 'Palatino Linotype', Palatino, Palladio, 'URW Palladio L', 'Book Antiqua', Baskerville,
-		'Bookman Old Style', 'Bitstream Charter', 'Nimbus Roman No9 L', Garamond, 'Apple Garamond',
-		'ITC Garamond Narrow', 'New Century Schoolbook', 'Century Schoolbook', 'Century Schoolbook L', Georgia, serif;
+	--font-stack-serif: 'Palatino Linotype', Palatino, Palladio, 'URW Palladio L', 'Book Antiqua',
+		Baskerville, 'Bookman Old Style', 'Bitstream Charter', 'Nimbus Roman No9 L', Garamond,
+		'Apple Garamond', 'ITC Garamond Narrow', 'New Century Schoolbook', 'Century Schoolbook',
+		'Century Schoolbook L', Georgia, serif;
 	--font-stack-mono: 'IBM Plex Mono', monospace;
 
 	height: 100vh;
 	min-height: 100vh;
 	font-family: var(--font-stack-sans);
 	font-weight: 400;
-	font-feature-settings: 'liga';
+	font-variant-ligatures: common-ligatures;
+	font-variant-numeric: tabular-nums;
 	hanging-punctuation: first last;
 	background-color: var(--background);
 	accent-color: var(--link);
