--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -28,9 +28,9 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-	list-style: none;
+/* https://piccalil.li/blog/removing-list-styles-without-affecting-semantics/ */
+:is(ul, ol)[class] {
+	list-style-type: '';
 }
 
 ul {
